--- a/package.json
+++ b/package.json
@@ -1,15 +1,45 @@
 {
   "name": "mern-oath2",
   "version": "1.0.0",
+  "private": true,
   "description": "This project contains an example of a react app that connects to the express server through Hydra. It also makes use of Nginx as a reverse proxy.",
-  "main": "index.js",
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:RickITKock/mern-stack-with-oath2.git"
   },
   "author": "Rick Kock",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^3.1.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
